# qskinny-mini-projects

./: README.md
LunchCalculator/: CMakeLists.txt  Calqlator.drawio  README.md  Simple_Projects.code-workspace  pseudocode_lunchcalculator
LunchCalculator/.cache/clangd/index/: ButtonsGridBox.cpp.50399DC05C09951B.idx  ButtonsGridBox.h.7519E5E548B8A38F.idx  CalculatorButtonSkinFactory.cpp.1BCC64477D2645DC.idx  CalculatorButtonSkinFactory.h.E85F777D6D607003.idx  DisplayLabel.cpp.6A21B2C8C114FE02.idx  DisplayLabel.h.957C155C95FCA52E.idx  NumberButtons.cpp.FB7305EF39C291A3.idx  NumberButtons.h.D33D233C9435645D.idx  OperationButtons.cpp.6DA4AF14A3563CCE.idx  OperationButtons.h.CF212DBD79FB59ED.idx  OtherButtons.cpp.959DAC15B259F05A.idx  OtherButtons.h.F8B1860E4D792CBE.idx  main.cpp.A869E49C6E621894.idx
LunchCalculator/src/: ButtonsGridBox.cpp  ButtonsGridBox.h  CalculatorButtonSkinFactory.cpp  CalculatorButtonSkinFactory.h  CalculatorSkinFactory.cpp  CalculatorSkinFactory.h  DisplayLabel.cpp  DisplayLabel.h  NumberButtons.cpp  NumberButtons.h  OperationButtons.cpp  OperationButtons.h  OtherButtons.cpp  OtherButtons.h  main.cpp
RealLunchCalculator/: CMakeLists.txt  RealLunchCalculator.drawio
RealLunchCalculator/src/: BottomSectionBox.cpp  BottomSectionBox.h  MainView.cpp  MainView.h  TopSectionBox.cpp  TopSectionBox.h  main.cpp
SmartOffice/: .gitignore  CMakeLists.txt  SmartHomeSketch.drawio
SmartOffice/src/: main.cpp
